<resources>
    <string name="app_name">HOPE</string>
    <string name="bg">Bg image</string>
    <string name="login">Login</string>
    <string name="please_sign">Please sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_">

Don\'t have an account? Sign up
</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>