<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="413dp"
        android:layout_height="664dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-105dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="316dp"
        android:layout_height="385dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/rectangle_2"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/login"
            android:layout_width="114dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:gravity="top"
            android:text="@string/login"
            android:textAppearance="@style/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142" />

        <TextView
            android:id="@+id/please_sign"
            android:layout_width="267dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:text="@string/please_sign"
            android:textAppearance="@style/please_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />


        <TextView
            android:id="@+id/email"
            android:layout_width="69dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/please_sign" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="87dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/email"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emialinp" />

        <EditText
            android:id="@+id/emialinp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:hint="Enter Your Email "
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/passin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Enter Your Password "
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            tools:ignore="SpeakableTextPresentCheck" />


        <View
            android:id="@+id/signinbut"
            android:layout_width="133dp"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rectangle_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passin" />

        <TextView
            android:id="@+id/Sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textAppearance="@style/email"


            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/signinbut"
            app:layout_constraintEnd_toEndOf="@+id/signinbut"
            app:layout_constraintStart_toStartOf="@+id/signinbut"
            app:layout_constraintTop_toTopOf="@+id/signinbut" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/signinlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="378dp"
        android:layout_height="6dp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="268dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>


